--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </p1>
                 </div>
                 <div class="events-img">
-                   <img src="bloomfieldMarket1.png">
+                   <img src="images/bloomfieldMarket1.PNG">
                 </div>
             </div>
         </section>
