--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </p1>
 </div>
 <div class="about-img">
-   <img src="images/about1.png">
+   <img src="images/about1.PNG">
 </div>
 </div>
 
