--- a/index.html
+++ b/index.html
@@ -121,11 +121,10 @@
 <div class="about">
     <p1>Cold Company Farm was founded in 2021, however our history started in 2017 when Jason Oddo started Bitter Ends Garden Project, a 0.9 acre plot in Verona, PA to support Bitter Ends Luncheonette, a locavore kitchen supplying a changing menu of fresh-baked breads, pastries, and sandwiches using locally grown organic vegetables. We have since expanded to 
         a 2 acre plot with a Greenhouse. We now source a variety of vegetables to several restaurants and shops in and around the Pittsburgh area year round. All of our vegetables are grown using no pesticides and are 100% organic. 
-
     </p1>
 </div>
 <div class="about-img">
-   <img src="images/about1.PNG">
+   <img src="images\about1.PNG">
 </div>
 </div>
 
