--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </p1>
 </div>
 <div class="about-img">
-   <img src="images\about1.PNG">
+   <img src="C:\Users\Anthony\Documents\GitHub\ajoddo20\images\about1.PNG">
 </div>
 </div>
 
